--- a/index.html
+++ b/index.html
@@ -9,6 +9,23 @@
     <title>Random Project</title>
 </head>
 <body>
-    
+        <div class="counter-container">
+            <i class="fab fa-twitter fa-3x"></i>
+            <div class="counter" data-target="12000">12000</div>
+            <span>Followers</span>
+        </div>
+
+        <div class="counter-container">
+            <i class="fab fa-youtube fa-3x"></i>
+            <div class="counter" data-target="50000">50000</div>
+            <span>Subscribers</span>
+        </div>
+
+        <div class="counter-container">
+            <i class="fab fa-facebook fa-3x"></i>
+            <div class="counter" data-target="22000">22000</div>
+            <span>Likes</span>
+        </div>
+
 </body>
 </html>
