--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
             <span>Followers</span>
         </div>
 
-        <div class="counter-container">
+        <div class="counter-container sec">
             <i class="fab fa-youtube fa-3x"></i>
             <div class="counter" data-target="50000">50000</div>
             <span>Subscribers</span>
         </div>
 
-        <div class="counter-container">
+        <div class="counter-container thr">
             <i class="fab fa-facebook fa-3x"></i>
             <div class="counter" data-target="22000">22000</div>
             <span>Likes</span>
         </div>
 
+        <script src="script.js"></script>
 </body>
 </html>
